--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -96,6 +96,10 @@
   margin-top: 20px;
   margin-right: 10px;
   width: 60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .reservation-details-right {
@@ -105,6 +109,7 @@
 
 .photo-reservation {
   width: 100%;
+  max-height: 85px;
   border-radius: 15px;
 }
 
