--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -53,7 +53,7 @@
   </div>
 
 <script>
-  document.addEventListener('turbo:load', () => {
+  document.addEventListener('turbo:render', () => {
     const container = document.querySelector('.chat-container');
 
     container.addEventListener('click', (event) => {
