--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,15 @@
   <head>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet">
-    <title>Coworkers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
-
     <%= csp_meta_tag %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <title><%= meta_title %></title>
+    <%= favicon_link_tag %>
      <meta name="description" content="<%= meta_description %>">    <!-- Facebook Open Graph data -->
       <meta property="og:title" content="<%= meta_title %>" />
       <meta property="og:type" content="website" />
@@ -26,7 +25,6 @@
             <meta name="twitter:description" content="<%= meta_description %>">
              <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
               <meta name="twitter:image:src" content="<%= meta_image %>">
-
   </head>
 
   <body>
