--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,7 +69,7 @@
                     <div class="divider">
                     </div>
                     <p class="card__description">
-                      <%= workspace.ambiance %> | <%= workspace.smoking ? "Fumeur" : "Non fumeur" %> | <%= workspace.animals %>
+                      <%= workspace.ambiance %> | <%= workspace.smoking ? "Fumeur" : "Non fumeur" %> | <%= workspace.animals == "non" ? "Pas d'animaux" : "#{workspace.animals}" %>
                     </p>
                   </div>
                 </div>
