dernier css filtres home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,10 @@
   display: inline-block;
 }
 
+.filtres-home{
+  font-size: 14px;
+}
+
 /* Sur les tablettes */
 @media (min-width: 908px) {
   .logo-carr {
