modification ok now

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -12,7 +12,7 @@
 }
 
 .workspace-infos{
-  padding: 10px;
+
 }
 
 .workspace-card{
@@ -20,7 +20,7 @@
   border-bottom-right-radius: 10px;
 }
 .font-awesome{
-  margin: 10px;
+  margin-top: 1rem;
 }
 
 .workspace-info-date{
@@ -29,7 +29,7 @@
   padding-top: 20px;
 }
 .bouton-show {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 // HEART
@@ -64,16 +64,15 @@
 }
 
 .input-left {
-  margin-top: 20px;
+  margin-top: 10px;
   width: 80%;
 }
 .chat-right {
   margin-left: 1rem;
-  margin-top: 20px;
+  margin-top: 10px;
   width: 20%;
 }
 .description-adress-show {
-  margin-left: 1rem;
   margin-top: 10px;
   width: 100%;
 }
