--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -17,19 +17,22 @@
             <div class="d-flex justify-content-between align-items-center">
               <%= f.check_box :smoking, label: false, class:"d-none icon-selector" %>
               <%= f.label :smoking  do %>
-                <div><i class="fa-solid fa-smoking fa-2xl"></i></div>
+                <div><i class="fa-solid fa-ban-smoking fa-2xl"></i></div>
               <% end %>
               <%= f.check_box :internet_connexion, label: false, class:"d-none icon-selector" %>
               <%= f.label :internet_connexion  do %>
-                <div><i class="fa-solid fa-wifi fa-2xl"></i></i></div>
+                <div><i class="fa-solid fa-wifi fa-2xl"></i></div>
               <% end %>
-              <%= f.check_box :air_conditioning, label: false, class:"d-none icon-selector" %>
-              <%= f.label :air_conditioning  do %>
-                <div><i class="fa-solid fa-snowflake fa-2xl"></i></div>
+              <%= f.check_box :parking, label: false, class:"d-none icon-selector" %>
+              <%= f.label :parking  do %>
+                <div><i class="fa-solid fa-square-parking fa-2xl"></i></div>
               <% end %>
+
             </div>
             <div class="workspace-label">Animaux:</div>
-              <%= f.input :animals, collection: [ "aucun", "chat", "chien"], label: false %>
+              <%= f.input :animals, collection: [ "Aucun", "Chat", "Chien"], label: false %>
+            <div class="workspace-label">Ambiance:</div>
+              <%= f.input :animals, collection: [ "Calme", "Animé"], label: false %>
               <%= f.button :submit, "Proposer mon workspace", class: 'container btn yellow-btn btn-lg btn-block text-white' %>
           </div>
       <% end %>
