--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -36,6 +36,25 @@
   white-space: normal;
 }
 
+.yellow-btn-mini-home {
+  padding: 5px 10px;
+  margin-left: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #FFB116;
+  background-image: linear-gradient(45deg, #FC9100 0%, #FFB116 51%, #FC9100 100%);
+  cursor: pointer;
+  opacity: 0.8;
+  max-width: 130px; /* Réduisez la largeur maximale du bouton */
+  white-space: normal;
+}
 
 .yellow-btn-mini-clair {
   padding: 10px 20px;
@@ -56,6 +75,13 @@
   white-space: normal;
 }
 
+.yellow-btn-mini-home:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
 .yellow-btn-mini:hover {
   background-position: right center;
   /* change the direction of the change here */
@@ -66,8 +92,8 @@
 .yellow-btn:active {
   transform: scale(0.95);
 }
+
 .btn-home {
-margin-top: 10%;
 margin-left: 10%;
 }
 
