--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,7 +13,7 @@
 }
 
 .workspace-image-index img {
-  border-radius: 20px;
+  border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(173, 173, 173, 0.3);
   margin-bottom: 10px;
   width: 100%;
@@ -25,9 +25,9 @@
 
 .workspace-card-index {
   background: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0px 10px rgba(66, 66, 66, 0.1);
   margin: 20px;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .workspace-name {
@@ -36,6 +36,7 @@
 
 .card-content-index {
   padding-bottom: 10px;
+  padding-left: 8px;
 }
 
 .heart-index{
