--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,10 +13,6 @@
   display: inline-block;
 }
 
-.filtres-home{
-  font-size: 14px;
-}
-
 /* Sur les tablettes */
 @media (min-width: 908px) {
   .logo-carr {
@@ -40,23 +36,22 @@
 .search-input {
   width: 90%;
   max-width: 500px;
-  padding: 10px 20px;
+  padding: 9px 20px;
   background-color: transparent;
   transition: transform 250ms ease-in-out;
-  font-size: 14px;
+  font-size: 15px;
   line-height: 20px;
-  color: #575757;
+  color: #000000;
   background-repeat: no-repeat;
   background-size: 16px 16px;
   background-position: 95% center;
   border-radius: 50px;
-  border: 1px solid #575756;
+  border: 1px solid #686868;
   transition: all 250ms ease-in-out;
   backface-visibility: hidden;
-  transform-style: preserve-3d;
 
   &::placeholder {
-    color: rgba(0, 0, 0, 1);
+    color: rgb(32, 32, 32);
     letter-spacing: 1.1px;
   }
 
@@ -79,19 +74,6 @@
   cursor: pointer;
   outline: inherit;
   margin-left: 1rem;
-}
-
-#search-button {
-  background-color: rgba(76, 175, 79, 0.733);
-  color: white;
-  padding: 14px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-#search-button:hover {
-  background-color: #45a049;
 }
 
 .tag-item {
