--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -13,7 +13,7 @@
           <h2>Mon profil</h2>
       <div class="profile-details">
         <div class ="profile-details-left">
-        <%= image_tag @my_workspaces.first.user.photos.first, class: "avatar-profile-details-dashboard", alt: "Photo" %>
+        <%= image_tag current_user.photos.first, class: "avatar-profile-details-dashboard", alt: "Photo" %>
         </div>
 
         <div class ="profile-details-right">
