--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,6 +17,7 @@
   box-shadow: 0px 0px 5px rgba(173, 173, 173, 0.3);
   margin-bottom: 10px;
   width: 100%;
+  max-height: 230px;
 }
 
 .workspace-infos{
